<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="393dp"
            android:layout_height="638dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout2">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="182dp">
            <ImageView
                    android:layout_width="411dp"
                    android:layout_height="190dp" app:srcCompat="@drawable/employee1" android:id="@+id/imageView"
                    android:layout_weight="1"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1"
                    android:layout_gravity="center_vertical">
                <TextView
                        android:text="@string/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/firstname"/>
                <TextView
                        android:text="@string/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/lastname"/>
                <TextView
                        android:text="@string/jobtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/jobtitle"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
                android:text="@string/employeeInfo"
                android:layout_width="match_parent"
                android:layout_height="35dp" android:id="@+id/employeeInfo"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="394dp"
            android:layout_height="34dp"
            android:id="@+id/linearLayout2" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">

        <TextView
                android:id="@+id/onetextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/onetextView"
                android:textAlignment="center"
                android:onClick="numberClicked"/>
        <TextView
                android:id="@+id/twotextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/twotextView"
                android:textAlignment="center"
                android:onClick="numberClicked"/>
        <TextView
                android:id="@+id/threetextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/threetextView"
                android:textAlignment="center"
                android:onClick="numberClicked"/>
        <TextView
                android:id="@+id/fourtextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fourtextView"
                android:textAlignment="center"
                android:onClick="numberClicked"/>
        <TextView
                android:id="@+id/fivetextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fivetextView"
                android:textAlignment="center"
                android:onClick="numberClicked"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>